--- a/source/blocks/page-footer/page-footer.less
+++ b/source/blocks/page-footer/page-footer.less
@@ -1,4 +1,81 @@
 .page-footer {
   color: @greyish-brown;
   background-color: @white;
+  min-height: 240px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  padding: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-flow: column nowrap;
+  max-width: 1440px;
+  @media @from-tablet {
+    min-height: 155px;
+    flex-flow: row nowrap;
+  }
 }
+
+.page-footer__social-list {
+  display: flex;
+  flex-flow: row wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.social-list__link {
+  display: block;
+  width: 45px;
+  height: 45px;
+  background-color: @light-gold;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @media @from-tablet {
+    width: 60px;
+    height: 60px;
+  }
+}
+
+.social-list__link svg {
+  fill: @dark-slate-blue;
+}
+
+.social-list__link--facebook svg {
+  width: 11px;
+  height: 21px;
+  @media @from-tablet {
+    width: 14px;
+    height: 28px;
+  }
+}
+.social-list__link--vkontakte svg {
+  width: 23px;
+  height: 12px;
+  @media @from-tablet {
+    width: 31px;
+    height: 16px;
+  }
+}
+.social-list__link--instagram svg {
+  width: 18px;
+  height: 18px;
+  @media @from-tablet {
+    width: 23px;
+    height: 23px;
+  }
+}
+
+.page-footer__copyright {
+  border-top: 1px solid rgba(0, 0, 0, .05); //TODO: check color
+  display: flex;
+  justify-content: space-between;
+  @media @only-mobile {
+    width: 100%;
+  }
+}
+
+.copyright__link {}
