--- a/source/blocks/page-header/page-header.less
+++ b/source/blocks/page-header/page-header.less
@@ -4,4 +4,7 @@
   padding: 25px;
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
