--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,6 +14,7 @@
 @import "../blocks/page-footer/page-footer.less";
 @import "../blocks/schedule/schedule.less";
 @import "../blocks/companion/companion.less";
+@import "../blocks/tags/tags.less";
 
 
 // Style-only components
@@ -22,9 +23,13 @@
 @import "components/subheading/subheading.less";
 @import "components/button/button.less";
 
+@import "components/main-menu/main-menu.less";
+@import "components/main-nav/main-nav.less";
+@import "components/my-profile/my-profile.less";
 @import "components/about-service/about-service.less";
 @import "components/calls-to-action/calls-to-action.less";
 @import "components/directions/directions.less";
+@import "components/direction-list/direction-list.less";
 @import "components/direction/direction.less";
 @import "components/first-screen/first-screen.less";
 @import "components/steps/steps.less";
