--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -38,3 +38,16 @@
 @very-dark-brown: #010000;
 @black: #000000;
 @black-3: rgba(0, 0, 0, 0.3);
+
+@mobile-width: 320;
+@tablet-width: 768;
+@desktop-width: 1440;
+
+@mobile-max-width: (@tablet-width - 1);
+@tablet-max-width: (@desktop-width - 1);
+
+@only-mobile: ~"screen and (max-width: @{mobile-max-width}px)";
+@only-tablet: ~"screen and (min-width: @{tablet-width}px) and (max-width: @{tablet-max-width}px)";
+@from-tablet: ~"screen and (min-width: @{tablet-width}px)";
+@to-desktop: ~"screen and (max-width: @{tablet-max-width}px)";
+@from-desktop: ~"screen and (min-width: @{desktop-width}px)";
