Адаптивные уголки у шагов на главной

--- a/source/less/components/steps/steps.less
+++ b/source/less/components/steps/steps.less
@@ -13,18 +13,23 @@
 .steps__item {
   color: @dark-blue-grey;
   padding: 20px 25px;
-  border-radius: 10px;
   font-size: 18px;
   font-weight: bold;
   line-height: 1;
   box-sizing: border-box;
+
+  @media @from-tablet {
+    width: 50%;
+  }
+  @media @from-desktop {
+    width: 25%;
+  }
 
   &::before {
     counter-increment: steps;
     content: counter(steps);
     color: @white;
   }
-
   &:nth-child(4n + 1) {
     background-color: @mango-two;
   }
@@ -41,10 +46,30 @@
     background-color: @light-gold;
   }
 
-  @media @from-tablet {
-    width: 50%;
+  &:first-child {
+    border-top-left-radius: 10px;
+    @media @only-mobile {
+      border-top-right-radius: 10px;
+    }
+    @media @from-desktop {
+      border-bottom-left-radius: 10px;
+    }
   }
-  @media @from-desktop {
-    width: 25%;
+  &:last-child {
+    border-bottom-right-radius: 10px;
+    @media @only-mobile {
+      border-bottom-left-radius: 10px;
+    }
+    @media @from-desktop {
+      border-top-right-radius: 10px;
+    }
+  }
+  @media @only-tablet {
+    &:nth-child(2) {
+      border-top-right-radius: 10px;
+    }
+    &:nth-last-child(2) {
+      border-bottom-left-radius: 10px;
+    }
   }
 }
