--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,8 +14,10 @@
 @import "../blocks/page-footer/page-footer.less";
 @import "../blocks/schedule/schedule.less";
 @import "../blocks/companion/companion.less";
+@import "../blocks/featured-companion/featured-companion.less";
 @import "../blocks/tags/tags.less";
-
+@import "../blocks/level/level.less";
+@import "../blocks/transport-list/transport-list.less";
 
 // Style-only components
 // meet once (or have primitive structure, like buttons) and realisation is inlined in html
@@ -25,7 +27,6 @@
 
 @import "components/main-menu/main-menu.less";
 @import "components/main-nav/main-nav.less";
-@import "components/my-profile/my-profile.less";
 @import "components/about-service/about-service.less";
 @import "components/calls-to-action/calls-to-action.less";
 @import "components/directions/directions.less";
@@ -36,6 +37,7 @@
 @import "components/locate-us/locate-us.less";
 
 @import "components/schedules/schedules.less";
+@import "components/my-profile/my-profile.less";
 @import "components/new-schedule/new-schedule.less";
 @import "components/step/step.less";
 
