--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -21,12 +21,14 @@
 @dark-blue-grey-two: #141b3b;
 @dark-blue-grey-three: #121936;
 @dark-slate-blue: #1d2e5b;
+@dark-slate-blue-15: rgba(29, 46, 91, 0.15);
 @dark-slate-blue-3: rgba(29, 46, 91, 0.3);
 @dark: #161c35;
 
 // greyish
 @white: #ffffff;
 @white-15: rgba(255, 255, 255, 0.15);
+@white-3: rgba(255, 255, 255, 0.3);
 @white-two: #f2f2f2;
 @pale-grey: #edeff6;
 @ghost: #cbced9;
