Заменил фоновые svg транспорта на спрайты

--- a/source/blocks/transport-list/transport-list.less
+++ b/source/blocks/transport-list/transport-list.less
@@ -9,26 +9,26 @@
   width: 21px;
   height: 21px;
 }
-.transport-list__item svg {
-  fill: @dark-slate-blue-15;
+.transport-list__item {
+  opacity: .15;
 }
-.transport-list__item--active svg {
-  fill: @dark-slate-blue;
+.transport-list__item--active {
+  opacity: 1;
 }
 
 .transport-list__item--plane {
   width: 19px;
-  background-image: url(../img/plane.svg);
+  background-image: url(../img/sprite.svg#plane-dark-slate-blue);
 }
 .transport-list__item--bus {
   width: 17px;
-  background-image: url(../img/bus.svg);
+  background-image: url(../img/sprite.svg#bus-dark-slate-blue);
 }
 .transport-list__item--bike {
   width: 24px;
-  background-image: url(../img/bike.svg);
+  background-image: url(../img/sprite.svg#bike-dark-slate-blue);
 }
 .transport-list__item--foot {
   width: 20px;
-  background-image: url(../img/run.svg);
+  background-image: url(../img/sprite.svg#foot-dark-slate-blue);
 }
