Выделил карточку избранного попутчика в отдельный блок

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,7 +14,7 @@
 @import "../blocks/page-footer/page-footer.less";
 @import "../blocks/schedule/schedule.less";
 @import "../blocks/companion/companion.less";
-
+@import "../blocks/featured-companion/featured-companion.less";
 
 // Style-only components
 // meet once (or have primitive structure, like buttons) and realisation is inlined in html
