--- a/source/less/style.less
+++ b/source/less/style.less
@@ -15,6 +15,7 @@
 @import "../blocks/schedule/schedule.less";
 @import "../blocks/companion/companion.less";
 @import "../blocks/featured-companion/featured-companion.less";
+@import "../blocks/level/level.less";
 
 // Style-only components
 // meet once (or have primitive structure, like buttons) and realisation is inlined in html
