Стили для транспорта

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,6 +16,7 @@
 @import "../blocks/companion/companion.less";
 @import "../blocks/featured-companion/featured-companion.less";
 @import "../blocks/level/level.less";
+@import "../blocks/transport-list/transport-list.less";
 
 // Style-only components
 // meet once (or have primitive structure, like buttons) and realisation is inlined in html
