--- a/source/less/components/main-nav/main-nav.less
+++ b/source/less/components/main-nav/main-nav.less
@@ -15,7 +15,9 @@
   }
 }
 
-.main-nav__list {
-  list-style: none;
-  display: flex;
+.main-nav__social-list {
+  justify-content: center;
+  @media @from-tablet {
+    justify-content: flex-start;
+  }
 }
