--- a/source/less/style.less
+++ b/source/less/style.less
@@ -27,6 +27,10 @@
 
 @import "components/main-menu/main-menu.less";
 @import "components/main-nav/main-nav.less";
+@import "components/site-nav/site-nav.less";
+@import "components/user-nav/user-nav.less";
+@import "components/social-list/social-list.less";
+@import "components/reach-list/reach-list.less";
 @import "components/about-service/about-service.less";
 @import "components/calls-to-action/calls-to-action.less";
 @import "components/directions/directions.less";
