--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -27,6 +27,7 @@
 
 // greyish
 @white: #ffffff;
+@silver: #cccccc;
 @white-15: rgba(255, 255, 255, 0.15);
 @white-3: rgba(255, 255, 255, 0.3);
 @white-two: #f2f2f2;
