--- a/source/less/components/social-list/social-list.less
+++ b/source/less/components/social-list/social-list.less
@@ -8,23 +8,26 @@
 
 .social-list__link--facebook {
   background-image: url(../img/sprite.svg#facebook-dark-slate-blue);
-  background-size: 11px;
+  background-size: 11px 21px;
   @media @from-tablet {
-    background-size: 14px;
-  }  
+    background-size: 14px 28px;
+  }
 }
 .social-list__link--vkontakte {
   background-image: url(../img/sprite.svg#vk-dark-slate-blue);
-  background-size: 23px;
+  background-size: 23px 12px;
   @media @from-tablet {
-    background-size: 31px;
-  }  
+    background-size: 31px 16px;
+  }
 }
 .social-list__link--instagram {
   background-image: url(../img/sprite.svg#instagram-dark-slate-blue);
-  background-size: 18px;
+  background-size: 18px 18px;
   @media @from-tablet {
-    background-size: 23px;
+    background-size: 24px 24px;
+  }
+  @media @from-desktop {
+    background-size: 23px 23px;
   }
 }
 .social-list__link {
