--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -14,6 +14,8 @@
 @salmon: #f97676;
 @vivid-orange: #ff5c23;
 @very-light-pink: #f1f1f1;
+@fantasy: #f9eaea;
+@pomegranate: #f02323;
 
 // blueish
 @french-blue: #4758a9;
