Добавил цвета для соцсетей в меню, и для лайков

--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -14,6 +14,8 @@
 @salmon: #f97676;
 @vivid-orange: #ff5c23;
 @very-light-pink: #f1f1f1;
+@fantasy: #f9eaea;
+@pomegranate: #f02323;
 
 // blueish
 @french-blue: #4758a9;
@@ -27,6 +29,7 @@
 
 // greyish
 @white: #ffffff;
+@silver: #cccccc;
 @white-15: rgba(255, 255, 255, 0.15);
 @white-3: rgba(255, 255, 255, 0.3);
 @white-two: #f2f2f2;
