Исправление стиля кода по стильгайду

--- a/source/blocks/page-footer/page-footer.less
+++ b/source/blocks/page-footer/page-footer.less
@@ -10,23 +10,19 @@
   align-items: center;
   flex-flow: column nowrap;
   max-width: 1440px;
+
   @media @from-tablet {
     min-height: 155px;
     flex-flow: row nowrap;
   }
 }
 
-
-
-
-
 .page-footer__copyright {
-  border-top: 1px solid rgba(0, 0, 0, .05); //TODO: check color
+  border-top: 1px solid rgba(0, 0, 0, 0.05); //TODO: check color
   display: flex;
   justify-content: space-between;
+
   @media @only-mobile {
     width: 100%;
   }
 }
-
-.copyright__link {}
