--- a/source/less/components/main-menu/main-menu.less
+++ b/source/less/components/main-menu/main-menu.less
@@ -27,7 +27,7 @@
 }
 
 .main-menu__trigger--open {
-  background-image: url(../img/sprite.svg#menu-white);
+  background-image: url("../img/sprite.svg#menu-white");
   background-size: 25px;
 }
 
@@ -39,6 +39,6 @@
   top: 0;
   bottom: 0;
   margin: auto;
-  background-image: url(../img/sprite.svg#menu-close-silver);
+  background-image: url("../img/sprite.svg#menu-close-silver");
   background-size: 19px;
 }
