--- a/source/less/components/social-list/social-list.less
+++ b/source/less/components/social-list/social-list.less
@@ -7,31 +7,37 @@
 }
 
 .social-list__link--facebook {
-  background-image: url(../img/sprite.svg#facebook-dark-slate-blue);
+  background-image: url("../img/sprite.svg#facebook-dark-slate-blue");
   background-size: 11px 21px;
+
   @media @from-tablet {
     background-size: 14px 28px;
   }
 }
+
 .social-list__link--vkontakte {
-  background-image: url(../img/sprite.svg#vk-dark-slate-blue);
+  background-image: url("../img/sprite.svg#vk-dark-slate-blue");
   background-size: 23px 12px;
+
   @media @from-tablet {
     background-size: 31px 16px;
   }
 }
+
 .social-list__link--instagram {
-  background-image: url(../img/sprite.svg#instagram-dark-slate-blue);
+  background-image: url("../img/sprite.svg#instagram-dark-slate-blue");
   background-size: 18px 18px;
+
   @media @from-tablet {
     background-size: 24px 24px;
   }
+
   @media @from-desktop {
     background-size: 23px 23px;
   }
 }
+
 .social-list__link {
-  display: block;
   width: 45px;
   height: 45px;
   background-color: @light-gold;
@@ -53,11 +59,13 @@
 }
 
 .social-list__link--facebook.social-list__link--alternate {
-  background-image: url(../img/sprite.svg#facebook-silver);
+  background-image: url("../img/sprite.svg#facebook-silver");
 }
+
 .social-list__link--vkontakte.social-list__link--alternate {
-  background-image: url(../img/sprite.svg#vk-silver);
+  background-image: url("../img/sprite.svg#vk-silver");
 }
+
 .social-list__link--instagram.social-list__link--alternate {
-  background-image: url(../img/sprite.svg#instagram-silver);
+  background-image: url("../img/sprite.svg#instagram-silver");
 }
