--- a/source/less/prepend.less
+++ b/source/less/prepend.less
@@ -1,8 +1,8 @@
 body {
-  font-family: BloggerSans;
+  font-family: "BloggerSans", "Arial", "Helvetica", sans-serif;
   background-color: @pale-grey;
 }
-
+ /* stylelint-disable */
 .visually-hidden {
   position: absolute;
   clip: rect(1px 1px 1px 1px);
@@ -14,3 +14,4 @@ body {
   width: 1px;
   overflow: hidden;
 }
+/* stylelint-enable */
