--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,9 +1,6 @@
 @import "normalize.less";
-
 @import "variables.less";
-
 @import "fonts.less";
-
 @import "prepend.less";
 
 // Blocks which contain both html realisation and styling
@@ -22,9 +19,8 @@
 // Style-only components
 // meet once (or have primitive structure, like buttons) and realisation is inlined in html
 @import "components/subheading/subheading.less";
-@import "components/subheading/subheading.less";
 @import "components/button/button.less";
-
+//
 @import "components/main-menu/main-menu.less";
 @import "components/main-nav/main-nav.less";
 @import "components/site-nav/site-nav.less";
@@ -39,12 +35,12 @@
 @import "components/first-screen/first-screen.less";
 @import "components/steps/steps.less";
 @import "components/locate-us/locate-us.less";
-
+//
 @import "components/schedules/schedules.less";
 @import "components/my-profile/my-profile.less";
 @import "components/new-schedule/new-schedule.less";
 @import "components/step/step.less";
-
+//
 @import "components/filter-companions/filter-companions.less";
 @import "components/companions-list/companions-list.less";
 @import "components/companions/companions.less";
