--- a/source/less/components/false-header/false-header.less
+++ b/source/less/components/false-header/false-header.less
@@ -7,7 +7,7 @@
 }
 
 .false-header--main {
-  background-image: url(../img/globe-back-mobile@1x.jpg);
+  background-image: url("../img/globe-back-mobile@1x.jpg");
   background-position-y: 0;
   background-position-x: center;
   background-repeat: no-repeat;
