--- a/source/less/components/first-screen/first-screen.less
+++ b/source/less/components/first-screen/first-screen.less
@@ -1,7 +1,7 @@
 .first-screen {
   color: @white;
   background-color: @dark-blue-grey;
-  background-image: url(../img/globe-back-mobile@1x.jpg);
+  background-image: url("../img/globe-back-mobile@1x.jpg");
   background-position-y: 0;
   background-position-x: center;
   background-repeat: no-repeat;
