--- a/source/less/components/reach-list/reach-list.less
+++ b/source/less/components/reach-list/reach-list.less
@@ -1,6 +1,7 @@
 .reach-list {
   padding: 0;
 }
+
 .reach-list__link {
   display: flex;
   align-items: center;
@@ -10,6 +11,7 @@
   color: @dark-blue-grey;
   text-decoration: none;
 }
+
 .reach-list__link::before {
   content: "";
   display: block;
@@ -21,6 +23,7 @@
   background-repeat: no-repeat;
   background-position: center;
   margin-right: 15px;
+
   @media @from-tablet {
     width: 67px;
     height: 67px;
@@ -30,9 +33,9 @@
 }
 
 .reach-list__link--phone::before {
-  background-image: url(../img/sprite.svg#phone-light-gold);
+  background-image: url("../img/sprite.svg#phone-light-gold");
 }
 
 .reach-list__link--mail::before {
-  background-image: url(../img/sprite.svg#mail-light-gold);
+  background-image: url("../img/sprite.svg#mail-light-gold");
 }
