--- a/source/less/normalize.less
+++ b/source/less/normalize.less
@@ -7,6 +7,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+ /* stylelint-disable */
 
 html {
   line-height: 1.15; /* 1 */
@@ -347,3 +348,4 @@ template {
 [hidden] {
   display: none;
 }
+/* stylelint-enable */
