Исправления для стайллинта

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -23,7 +23,7 @@
 @import "components/subheading/subheading.less";
 @import "components/subheading/subheading.less";
 @import "components/button/button.less";
-
+//
 @import "components/about-service/about-service.less";
 @import "components/calls-to-action/calls-to-action.less";
 @import "components/directions/directions.less";
@@ -31,11 +31,11 @@
 @import "components/first-screen/first-screen.less";
 @import "components/steps/steps.less";
 @import "components/locate-us/locate-us.less";
-
+//
 @import "components/schedules/schedules.less";
 @import "components/new-schedule/new-schedule.less";
 @import "components/step/step.less";
-
+//
 @import "components/filter-companions/filter-companions.less";
 @import "components/companions-list/companions-list.less";
 @import "components/companions/companions.less";
