--- a/source/less/components/site-nav/site-nav.less
+++ b/source/less/components/site-nav/site-nav.less
@@ -1,6 +1,20 @@
 .site-nav {
   list-style: none;
   padding: 0;
+
+  @media @from-desktop {
+    display: flex;
+    align-items: center;
+
+    &::before {
+      content: "";
+      display: block;
+      width: 60px;
+      height: 2px;
+      background-color: @white-two;
+      margin-right: 45px;
+    }
+  }
 }
 
 .site-nav__item {
@@ -9,18 +23,37 @@
   @media @only-mobile {
     text-align: center;
   }
+
+  @media @from-desktop {
+    &:not(:last-child) {
+      margin-right: 35px;
+    }
+  }
+
+  @media @to-desktop {
+    // background-color: @white;
+  }
 }
 
 .site-nav__link {
+  font-weight: 500;
+  line-height: 1.2;
+  text-decoration: none;
+
   @media @to-desktop {
     font-size: 30px;
-    font-weight: 500;
-    line-height: 1.2;
     color: @dark-blue-grey;
-    text-decoration: none;
   }
 
   @media @only-tablet {
     font-size: 60px;
+    line-height: 1.18;
+  }
+
+  @media @from-desktop {
+    font-size: 20px;
+    line-height: 1.5;
+    text-align: left;
+    color: @white-two;
   }
 }
