--- a/source/less/components/new-schedule/new-schedule.less
+++ b/source/less/components/new-schedule/new-schedule.less
@@ -8,3 +8,51 @@
 .new-schedule__heading {
   margin: 0;
 }
+
+.new-schedule__companions-label,
+.new-schedule__duration-label {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1;
+  letter-spacing: 1.6px;
+  color: @dark-slate-blue;
+  text-transform: uppercase;
+
+  @media @from-tablet {
+    font-size: 20px;
+    line-height: 0.9;
+    letter-spacing: 2px; 
+  }
+}
+
+.new-schedule__children-ok-label {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 1;
+  color: @greyish-brown;  
+
+  @media @from-tablet {
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 0.9;
+    letter-spacing: 2px;
+    color: @dark-slate-blue;
+  }
+}
+
+.new-schedule__companions,
+.new-schedule__duration {
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid @ghost;
+  padding: 20px;
+  box-sizing: border-box;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 0.9;
+  letter-spacing: 2px;
+  text-align: center;
+  color: @dark-slate-blue;
+
+}
