--- a/source/less/style.less
+++ b/source/less/style.less
@@ -15,6 +15,7 @@
 @import "../blocks/tags/tags.less";
 @import "../blocks/level/level.less";
 @import "../blocks/transport-list/transport-list.less";
+@import "../blocks/date-picker/date-picker.less";
 
 // Style-only components
 // meet once (or have primitive structure, like buttons) and realisation is inlined in html
