--- a/source/less/style.less
+++ b/source/less/style.less
@@ -21,6 +21,7 @@
 // meet once (or have primitive structure, like buttons) and realisation is inlined in html
 @import "components/subheading/subheading.less";
 @import "components/button/button.less";
+@import "components/page-section/page-section.less";
 //
 @import "components/main-menu/main-menu.less";
 @import "components/main-nav/main-nav.less";
@@ -36,6 +37,7 @@
 @import "components/first-screen/first-screen.less";
 @import "components/steps/steps.less";
 @import "components/locate-us/locate-us.less";
+@import "components/service/service.less";
 //
 @import "components/schedules/schedules.less";
 @import "components/my-profile/my-profile.less";
