--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -34,6 +34,7 @@
 @white-3: rgba(255, 255, 255, 0.3);
 @white-two: #f2f2f2;
 @pale-grey: #edeff6;
+@pale-grey-dark: #e2e5f2;
 @ghost: #cbced9;
 @snuff: #dfe3f0;
 @periwinkle-grey: #d4d9eb;
