--- a/source/blocks/page-header/page-header.less
+++ b/source/blocks/page-header/page-header.less
@@ -7,6 +7,10 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
+
+  max-width: ~"@{desktop-width}px";
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
 .page-header__logo-wrap {
