--- a/source/less/style.less
+++ b/source/less/style.less
@@ -22,6 +22,7 @@
 @import "components/subheading/subheading.less";
 @import "components/button/button.less";
 @import "components/page-section/page-section.less";
+@import "components/standard-paragraph/standard-paragraph.less";
 //
 @import "components/main-menu/main-menu.less";
 @import "components/main-nav/main-nav.less";
