--- a/source/blocks/page-header/page-header.less
+++ b/source/blocks/page-header/page-header.less
@@ -11,6 +11,18 @@
   max-width: ~"@{desktop-width}px";
   box-sizing: border-box;
   margin: 0 auto;
+
+  background-image: url("../img/globe-back-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+
+  @media @from-tablet {
+    background-image: url("../img/globe-back-tablet@1x.jpg")
+  }
+
+  @media @from-desktop {
+    background-image: url("../img/globe-back-desktop@1x.jpg")
+  }
 }
 
 .page-header__logo-wrap {
@@ -20,6 +32,23 @@
 
 .page-header__slogan {
   width: 100%;
+  font-size: 36px;
+  font-weight: bold;
+  line-height: 1.11;
+  text-align: center;
+  color: @white;
+  margin-top: 50px;
+  margin-bottom: 240px;
+
+  @media @from-tablet {
+    font-size: 60px;
+    line-height: 1.17;
+    text-align: center;
+  }
+
+  @media @from-desktop {
+    text-align: left;
+  }
 }
 
 .page-header__menu-frontend {
@@ -174,3 +203,11 @@
     border-radius: 25px;
   }
 }
+
+.page-header__review-wrap {
+  color: @white;
+}
+
+.page-header__review-text {}
+
+.page-header__review-author {}
