--- a/source/less/components/about-service/about-service.less
+++ b/source/less/components/about-service/about-service.less
@@ -2,4 +2,9 @@
   background-image: url("../img/about-mobile@1x.png");
   background-position: center;
   background-repeat: no-repeat;
+  color: @white;
 }
+
+.about-service__description {}
+
+.about-service__action {}
