--- a/source/less/components/button/button.less
+++ b/source/less/components/button/button.less
@@ -9,11 +9,36 @@
   justify-content: center;
   align-items: center;
   width: 230px;
-  height: 40px;
+  min-height: 40px;
   border-radius: 20px;
   border: 0;
   background: @light-gold;
   cursor: pointer;
+}
+
+.button--big {
+  min-height: 62px;
+  border-radius: 10px;
+  position: relative;
+  justify-content: space-between;
+  color: @dark-slate-blue;
+  padding: 0 25px;
+
+  @media @from-tablet {
+    min-height: 81px;
+    border-radius: 20px;
+    padding: 0 35px;
+  }
+
+  &::after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    border-left: 10px solid currentColor;
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+  }
 }
 
 .button--white {
