--- a/source/less/components/directions/directions.less
+++ b/source/less/components/directions/directions.less
@@ -8,17 +8,4 @@
 
 }
 
-.directions__disclaimer {
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 1.38;
-
-  @media @from-tablet {
-    font-size: 28px;
-    line-height: 1.18;
-  }
-
-  @media @from-desktop {
-
-  }
-}
+.directions__disclaimer {}
