--- a/source/blocks/level/level.less
+++ b/source/blocks/level/level.less
@@ -2,11 +2,31 @@
   position: relative;
 }
 
+.level--dark svg {
+  background-color: rgba(0, 0, 0, 0.5); // TODO: check color
+  border-radius: 50%;
+}
+
 .level .level__value {
   position: absolute;
+  width: 100%;
+  height: 100%;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 0.75;
+  text-align: center;
+  color: @dark-slate-blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+
+  @media @from-tablet {
+    line-height: 1;
+  }
 }
 
 .level--dark .level__value {
+  display: block;
   font-size: 24px;
   font-weight: bold;
   line-height: 1;
@@ -45,6 +65,7 @@
   height: 30px;
   top: 25px;
   left: 30px;
+  display: block;
 
   &::after {
     content: "level";
