--- a/source/less/components/calls-to-action/calls-to-action.less
+++ b/source/less/components/calls-to-action/calls-to-action.less
@@ -5,3 +5,62 @@
   text-align: center;
   border-radius: 20px;
 }
+
+.calls-to-action__auth-link {
+  color: @light-gold;
+}
+
+.calls-to-action__registration-form {
+  display: flex;
+}
+
+.calls-to-action__registration-email {
+  width: 100%;
+  height: 62px;
+  border-radius: 20px;
+  background-color: @white;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 1;
+  padding-left: 24px;
+  box-sizing: border-box;
+  border: 0;
+
+  &::placeholder {
+    color: rgba(68, 68, 68, 0.3);
+  }
+
+  @media @from-tablet {
+    width: calc(100% - 82px);
+    height: 81px;
+    padding-left: 35px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+  }  
+
+  @media @from-desktop {
+    width: 850px;
+  }
+}
+
+.calls-to-action__register {
+  width: 60px;
+  margin-left: -60px;
+
+  @media @from-tablet {
+    width: 82px;
+    //margin-left: -60px;
+  }
+
+  @media @from-desktop {
+    width: 324px;
+  }  
+}
+
+.calls-to-action__register > span {
+  display: none;
+
+  @media @from-desktop {
+    display: inline;
+  }
+}
