--- a/source/blocks/page-footer/page-footer.less
+++ b/source/blocks/page-footer/page-footer.less
@@ -19,6 +19,10 @@
   }
 }
 
+.page-footer__social-list {
+  display: flex;
+}
+
 .page-footer__copyright {
   border-top: 1px solid rgba(0, 0, 0, 0.05); // TODO: check color
   display: flex;
